# ChaosModV

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ChaosMod.sln  README.md  WEBPROXY.md  version.txt
ChaosMod/: .clang-format  .clangd  CMakeLists.txt  ChaosMod.rc  ChaosMod.vcxproj  ChaosMod.vcxproj.filters  ChaosMod.vcxproj.filters.orig  DebugMenu.cpp  DebugMenu.h  EffectConfig.h  EffectDispatcher.cpp  EffectDispatcher.h  EffectThread.cpp  EffectThread.h  EffectThreads.cpp  EffectThreads.h  Effects.cpp  Effects.h  FailsafeManager.cpp  FailsafeManager.h  HTTP.cpp  HTTP.h  Info.h  InfoTEMPLATE.h.in  LuaLoader.cpp  LuaLoader.h  LuaManager.cpp  LuaManager.h  LuaScripts.cpp  LuaScripts.h  Main.cpp  Main.h  Memory.cpp  Memory.h  Mp3Manager.cpp  Mp3Manager.h  OptionsFile.cpp  OptionsFile.h  PedsWaterGuns.cpp  PlayerMagnetGravity.cpp  (+20 more)
ChaosMod/Components/: Component.h  CrossingChallenge.cpp  CrossingChallenge.h  DebugMenu.cpp  DebugMenu.h  DebugSocket.cpp  DebugSocket.h  EffectDispatchTimer.cpp  EffectDispatchTimer.h  EffectDispatcher.cpp  EffectDispatcher.h  EffectShortcuts.cpp  EffectShortcuts.h  Failsafe.cpp  Failsafe.h  Globals.cpp  Globals.h  HelpTextQueue.cpp  HelpTextQueue.h  KeyStates.cpp  KeyStates.h  LuaScripts.cpp  LuaScripts.h  MetaModifiers.h  Mp3Manager.cpp  Mp3Manager.h  ShortCut.cpp  ShortCut.h  Shortcuts.cpp  Shortcuts.h  SplashTexts.cpp  SplashTexts.h  TwitchVoting.cpp  TwitchVoting.h  Voting.cpp  Voting.h  Workshop.cpp  Workshop.h
ChaosMod/Components/EffectSound/: EffectSound3D.cpp  EffectSound3D.h  EffectSoundMCI.cpp  EffectSoundMCI.h  EffectSoundManager.cpp  EffectSoundManager.h  EffectSoundManagers.h
ChaosMod/Effects/: EEffectAttributes.h  EEffectCategory.h  EEffectExecutionType.h  EEffectTimedType.h  Effect.h  EffectAttributes.h  EffectCategory.h  EffectConfig.h  EffectData.h  EffectExecutionType.h  EffectGroup.h  EffectGroups.h  EffectIdentifier.h  EffectSoundPlayOptions.h  EffectThreads.cpp  EffectThreads.h  EffectTimedType.h  Effects.h  EffectsInfo.h  EffectsInfo.h.orig  EffectsInfo_BASE_640.h  EffectsInfo_LOCAL_640.h  EffectsInfo_REMOTE_640.h  EnabledEffects.h  EnabledEffectsMap.h  MetaEffectInfo.h  MetaModifiers.h
ChaosMod/Effects/Condition/: ConditionEnhancedShader.cpp  ConditionProportionalVotingEnabled.cpp  ConditionUsingDistanceTimer.cpp  ConditionUsingTimeTimer.cpp  ConditionVotingEnabled.cpp  EffectCondition.h
ChaosMod/Effects/Register/: RegisterEffect.h  RegisteredEffects.h  RegisteredEffectsMetadata.h
ChaosMod/Effects/db/: PedsNapTime.cpp  PlayerTeleportYankton.cpp  VehsFuelSpill.cpp
ChaosMod/Effects/db/Meta/: Meta2xChaos.cpp  MetaAdditionalEffects.cpp  MetaEffectDuration.cpp  MetaFakeChaos.cpp  MetaFlipUI.cpp  MetaFpsLimit.cpp  MetaHideChaosUI.cpp  MetaNoChaos.cpp  MetaReInvoke.cpp  MetaTimerMode.cpp  MetaTimerSpeed.cpp  MetaVotingMode.cpp
ChaosMod/Effects/db/Misc/: MiscAirstrike.cpp  MiscAllProps.cpp  MiscAnimPostFXController.cpp  MiscAustralienGuy.cpp  MiscBlackHole.cpp  MiscBlackout.cpp  MiscBlueballed.cpp  MiscBoostVelocity.cpp  MiscCaeser.cpp  MiscCloneOnDeath.cpp  MiscCocktail.cpp  MiscCoffinDance.cpp  MiscColaRain.cpp  MiscComplicationsJump.cpp  MiscCrashRoulette.cpp  MiscDVDScreensaver.cpp  MiscDeaf.cpp  MiscEarthquake.cpp  MiscEsp.cpp  MiscEverythingFacePlayer.cpp  MiscFakeCrash.cpp  MiscFakeDeath.cpp  MiscFakeDisconnect.cpp  MiscFakeSpawn.cpp  MiscFireworks.cpp  MiscFlamethrower.cpp  MiscFlashbang.cpp  MiscFlipUI.cpp  MiscFlyingBullets.cpp  MiscForcedFP.cpp  MiscForcefield.cpp  MiscFpsLimit.cpp  MiscFrozen.cpp  MiscFullAssault.cpp  MiscGetSlapped.cpp  MiscGetTowed.cpp  MiscGhostWorld.cpp  MiscGlobalArson.cpp  MiscGoToJail.cpp  MiscGravityController.cpp  (+86 more)
ChaosMod/Effects/db/Peds/: Peds7030Jesus.cpp  (+131 more)
ChaosMod/Lib/: scrThread.h
ChaosMod/Memory/: Audio.h  Drawing.h  Entity.h  EntityFragments.h  Gravity.h  Handle.h  Memory.cpp  Memory.h  Misc.h  PedModels.h  Physics.h  Player.h  Script.h  Shader.h  Snow.h  UI.h  VehPool.h  Vehicle.h  ViewMatrix.h  Water.h  Weapon.h  WeaponPool.h  WorldToScreen.h
ChaosMod/Memory/Hooks/: ApplyChangeSetEntryHook.cpp  AudioClearnessHook.cpp  AudioClearnessHook.h  AudioPitchHook.cpp  AudioPitchHook.h  AudioPositionHook.cpp  AudioPositionHook.h  AudioSettingsHook.cpp  AudioSettingsHook.h  AudioVolumeHook.cpp  AudioVolumeHook.h  Controls.cpp  DrawingHooks.cpp  DrawingHooks.h  EntityCoordsHook.cpp  EntityCoordsHook.h  GetLabelTextHook.cpp  GetLabelTextHook.h  HandleToEntityStructHook.cpp  HandleToEntityStructHook.h  Hook.cpp  Hook.h  LabelHook.cpp  LabelHook.h  MiscHooks.cpp  ModelSpawnBypass.cpp  OnlineVehicleHook.cpp  OnlineVehicleHook.h  PresentHook.cpp  PresentHook.h  ScriptThreadRunHook.cpp  ScriptThreadRunHook.h  ShaderHook.cpp  ShaderHook.h  TestHook.cpp  VehicleHooks.cpp  VehicleHooks.h  WorldToScreenHook.cpp  WorldToScreenHook.h
ChaosMod/Util/: Camera.h  Color.h  Colour.h  Constants.h  CrashHandler.h  DiscordRPC.cpp  DiscordRPC.h  EntityIterator.h  Events.h  File.h  Game.h  Graphics.h  Hash.h  HelpText.h  Http.h  Logging.h  MacroConcat.h  Macros.h  Model.h  Natives.h  OptionDefaults.h  OptionsFile.h  OptionsManager.h  PedVoices.h  Peds.h  Player.h  PoolSpawner.cpp  PoolSpawner.h  Random.h  Script.h  ScriptText.h  Text.h  TimerMode.h  TryParse.h  Types.h  Vehicle.h  VotingMode.h  Weapon.h  Window.h  Workshop.h  (+1 more)
(+529 files in other folders)
